# yolox

./: .gitignore  README.md  detector.py  eval.py  kmeans.py  simple_detector.py  train.py
core/callbacks/: vocmapcallback.py
core/image/: __init__.py  draw.py
docker_images/cpu/: Dockerfile
docker_images/gpu/: Dockerfile
example/hole_detector/cfgs/: hole.yaml
example/hole_detector/data/: train.txt  valid.txt
example/hole_detector/data/Annotations/: frame0000.xml  frame0001.xml  frame0002.xml  frame0003.xml  frame0004.xml  frame0005.xml  frame0006.xml  frame0007.xml  frame0008.xml  frame0009.xml
example/hole_detector/models/tiny_yolox/: keras_metadata.pb  saved_model.pb
example/hole_detector/models/tiny_yolox/variables/: variables.index
tools/model/: model_converter.py
tools/voc_to_yolox/: voc_to_yolox_converter.py
tools/voc_to_yolox/utils/: voc.py
tutorials/cpp_integration/: .clang-format  CMakeLists.txt  tutorial_cpp_integration.cpp
tutorials/cpp_integration/deeplearning/python_deeplearning/: __init__.py  predict.py
tutorials/cpp_integration/deeplearning/python_deeplearning/utils/: bbox.py  utils.py
tutorials/cpp_integration/include/data/: Hole.hpp
tutorials/cpp_integration/include/detector/: DnnHoleLocalizer.hpp
tutorials/cpp_integration/src/data/: Hole.cpp
tutorials/cpp_integration/src/detector/: DnnHoleLocalizer.cpp
